--- a/templates/admin/admin_base.html.twig
+++ b/templates/admin/admin_base.html.twig
@@ -10,6 +10,7 @@
         {% endblock %}
 
         {% block javascripts %}
+
             {{ encore_entry_script_tags('admin') }}
         {% endblock %}
     </head>
@@ -25,10 +26,10 @@
                 <!-- Right navbar links -->
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item d-none d-sm-inline-block">
-                        <a href="index3.html" class="nav-link">Home</a>
+                        <a href="/" class="nav-link">Go to Site</a>
                     </li>
                     <li class="nav-item d-none d-sm-inline-block">
-                        <a href="#" class="nav-link">Contact</a>
+                        <a href="{{ path('app_logout') }}" class="nav-link">Logout</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#"><i
@@ -63,36 +64,22 @@
                         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                             <!-- Add icons to the links using the .nav-icon class
                                  with font-awesome or any other icon font library -->
-                            <li class="nav-item has-treeview menu-open">
-                                <a href="#" class="nav-link active">
+                            <li class="nav-item">
+                                <a href="{{ path('admin_user') }}" class="nav-link">
                                     <i class="nav-icon fas fa-tachometer-alt"></i>
-                                    <p>
-                                        Starter Pages
-                                        <i class="right fas fa-angle-left"></i>
-                                    </p>
+                                    <p>Dashboard</p>
                                 </a>
-                                <ul class="nav nav-treeview">
-                                    <li class="nav-item">
-                                        <a href="#" class="nav-link active">
-                                            <i class="far fa-circle nav-icon"></i>
-                                            <p>Active Page</p>
-                                        </a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="#" class="nav-link">
-                                            <i class="far fa-circle nav-icon"></i>
-                                            <p>Inactive Page</p>
-                                        </a>
-                                    </li>
-                                </ul>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">
-                                    <i class="nav-icon fas fa-th"></i>
-                                    <p>
-                                        Simple Link
-                                        <span class="right badge badge-danger">New</span>
-                                    </p>
+                                <a href="{{ path('admin_user') }}" class="nav-link">
+                                    <i class="nav-icon fas fa-user-circle"></i>
+                                    <p>Users</p>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="{{ path('admin_page') }}" class="nav-link">
+                                    <i class="far fa-file-alt nav-icon"></i>
+                                    <p>Page</p>
                                 </a>
                             </li>
                         </ul>
