--- a/templates/admin/user/index.html.twig
+++ b/templates/admin/user/index.html.twig
@@ -1,20 +1,42 @@
 {% extends('admin/admin_base.html.twig') %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+<div class="content-header">
+    <div class="container-fluid">
+        <div class="row mb-2">
+            <div class="col-sm-6">
+                <h1 class="m-0 text-dark">{{ data.title }}</h1>
+            </div><!-- /.col -->
+            <div class="col-sm-6">
+                <ol class="breadcrumb float-sm-right">
+                    <li class="breadcrumb-item"><a href="{{ path('admin_user') }}">Home</a></li>
+                    <li class="breadcrumb-item active">Users</li>
+                </ol>
+            </div><!-- /.col -->
+        </div><!-- /.row -->
+    </div><!-- /.container-fluid -->
+</div>
+<!-- /.content-header -->
+<!-- Main content -->
+<div class="content">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="card">
+                    <div class="card-body">
 
-<div class="example-wrapper">
-    <p><a href="{{ path('app_logout') }}">Logout</a></p>
-    <h1>Hello {{ controller_name }}! ✅</h1>
-    <p><a href="{{ path('admin_user_create') }}">Create User</a></p>
-    <h2>{{ data.title }}</h2>
-    <ul>
-        {% for user in users %}
-            <li>{{ user.email }} - {{ user.roles | json_encode }}</li>
-        {% endfor %}
-    </ul>
+                        <h1>Hello {{ controller_name }}! ✅</h1>
+                        <p><a href="{{ path('admin_user_create') }}">Create User</a></p>
+                        <h2>{{ data.title }}</h2>
+                        <ul>
+                            {% for user in users %}
+                                <li>{{ user.email }} - {{ user.roles | json_encode }}</li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
