--- a/templates/admin/admin_base.html.twig
+++ b/templates/admin/admin_base.html.twig
@@ -65,7 +65,7 @@
                             <!-- Add icons to the links using the .nav-icon class
                                  with font-awesome or any other icon font library -->
                             <li class="nav-item">
-                                <a href="{{ path('admin_user') }}" class="nav-link">
+                                <a href="{{ path('admin_dashboard') }}" class="nav-link">
                                     <i class="nav-icon fas fa-tachometer-alt"></i>
                                     <p>Dashboard</p>
                                 </a>
@@ -89,6 +89,7 @@
                 <!-- /.sidebar -->
             </aside>
             <div class="content-wrapper">
+            {% include 'admin/flash-messages/messages.html.twig' %}
             {% block body %}{% endblock %}
             </div>
             <!-- Control Sidebar -->
