--- a/templates/admin/user/index.html.twig
+++ b/templates/admin/user/index.html.twig
@@ -46,8 +46,10 @@
                                     <td>{{ user.roles | json_encode }}</td>
                                     <td>{{ user.email }}</td>
                                     <td>
-                                        <a href="#" class="btn btn-primary">Edit</a>
-                                        <button class="btn btn-danger">Delete</button>
+                                        <a href="{{ path('admin_user_update', {'userId': user.id}) }}" class="btn btn-primary">Edit</a>
+                                        <form method="post" action="" style="display:inline-block;">
+                                        <input type="submit" class="btn btn-danger" value="Delete" style="display:inline-block;" />
+                                        </form>
                                     </td>
                                 </tr>
                                 {% endfor %}
